@@ -1,3 +1,4 @@
+/var/log/spvd/*/*.log
 /var/log/spvd/*.log {
 	weekly
 	missingok
